5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4009/executions/1671_1100.log
== SUBMITION (2019-04-29 12:36:42) 
-- CODE:

1
# Teste seu código aos poucos.
2
# Não teste tudo no final, pois fica mais difícil de identificar erros.
3
# Ao testar sua solução, não se limite ao caso de exemplo.
4
​
5
x = int(input("valor cedula: "))
6
​
7
print("Entrada:", x)
8
​
9
if (x == 2):
10
   print("Animal: Tartatura")
11
elif (x == 5):
12
   print("Animal: Garca")
13
elif (x == 10):
14
   print("Animal: Arara")
15
elif (x == 20):
16
   print("Animal: Mico-leao-dourado")
17
elif (x == 50):
18
   print("Animal: Onca-pintada")
19
elif (x == 100):
20
   print("Animal: Garoupa")
21
else: 
22
   print("Animal: Invalido")
Console
Shell


-- EXECUTION TIME:
0.208948
-- ERROR:
  File "/home/codebench/codes/1671/1100/main.py", line 9
    \u200b
    ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:37:03) 
-- CODE:

1
# Teste seu código aos poucos.
2
# Não teste tudo no final, pois fica mais difícil de identificar erros.
3
# Ao testar sua solução, não se limite ao caso de exemplo.
4
​
5
x = int(input("valor cedula: "))
6
​
7
print("Entrada:", x)
8
​
9
if (x == 2):
10
   print("Animal: Tartatura")
11
elif (x == 5):
12
   print("Animal: Garca")
13
elif (x == 10):
14
   print("Animal: Arara")
15
elif (x == 20):
16
   print("Animal: Mico-leao-dourado")
17
elif (x == 50):
18
   print("Animal: Onca-pintada")
19
elif (x == 100):
20
   print("Animal: Garoupa")
21
else: 
22
   print("Animal: Invalido")
Console
Shell
-- EXECUTION TIME:
0.117458
-- ERROR:
  File "/home/codebench/codes/1671/1100/main.py", line 9
    \u200b
    ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:37:43) 
-- CODE:
x = int(input("valor cedula: "))

print("Entrada:", x)

if (x == 2):
	print("Animal: Tartatura")
elif (x == 5):
	print("Animal: Garca")
elif (x == 10):
	print("Animal: Arara")
elif (x == 20):
	print("Animal: Mico-leao-dourado")
elif (x == 50):
	print("Animal: Onca-pintada")
elif (x == 100):
	print("Animal: Garoupa")
else: 
	print("Animal: Invalido")
-- EXECUTION TIME:
0.164884
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
